<resources>
    <string-array name="birds">
        <item>crane</item>
        <item>Cuckoo</item>
        <item>Pigeon</item>
        <item>Eagle</item>
        <item>Owl</item>
        <item>Vulture</item>
        <item>WoodPecker</item>
    </string-array>
    <string name="app_name">My Application</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- layout form-->
    <string name="form_text_title" value="Enter Feedback details to send to the developer" />
    <string name="et_name">your name</string>
    <string name="et_email">Your EMail</string>
    <string name="et_feedback">Enter Feedback...</string>
    <string name="tv_check">What would you like?</string>
    <!-- Layout file -->
    <string name="btn_linear">Linear</string>
    <string name="btn_relative">Relative</string>
    <string name="btn_grid">Grid</string>
    <string name="btn_table">table</string>
    <string name="btn_constraint">Constraint</string>
    <string name="btn_frame">Frame</string>

    <!-- Fragment Chapter-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_bottom">BottomActivity</string>

    <!--RecycleView chapter button title -->
    <string name="btn_recycleview">RecycleView</string>
    <string name="btn_listview">ListView</string>
    <string name="btn_item_decoration">GridView item Decoration</string>
    <string name="btn_view_pager">View Pager</string>
    <string name="btn_bottom_nav">Bottom Navigation</string>

    <!--Listview -->
    <string name="listview_expand">List expand</string>
    <string name="listview_collapse">List collapsed</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_chap4_title">Chapter-4 Fragment</string>
    <string name="btn_chap4_jetpack">Jetpack</string>
    <string name="btn_chap4_fragmentContainer">Fragment Container</string>

    <!-- Button title-->
    <string name="title1">Ch-1(A)UI Form</string>
    <string name="title2">Ch-2 Layouts</string>
    <string name="title3">Ch-3 RecycleView And Adapter</string>

    <string name="title8"> Ch-7 Design Support</string>
    <!-- String used in fragment name-->
    <string name="fragment1_title">Gallery</string>
    <string name="fragment2_title">Send message</string>
    <string name="fragment3_title">View message</string>
    <string name="btn_send">send</string>
    <string name="et_hint">Enter message</string>

    <!--ch 7 Design Support-->
    <string name="btnDesign">Design Based</string>
    <string name="btnScroll">Scroll Based</string>
    <string name="large_text">
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
        "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
        "It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n"
    </string>
    <string name="msg_clicked">Hi! I am Clicked and my position is changed.</string>
</resources>