<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecycleViewPractical.RecycleActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ADD8E6"
        android:foreground="@drawable/ripple_bg"
        android:text="@string/btn_listview"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ADD8E6"
        android:foreground="@drawable/ripple_bg"
        android:text="@string/btn_recycleview"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/btn_listview"
        app:layout_constraintEnd_toStartOf="@id/btn_listview"
        app:layout_constraintTop_toBottomOf="@id/btn_listview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_recyclegrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ADD8E6"
        android:foreground="@drawable/ripple_bg"
        android:text="@string/btn_item_decoration"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/btn_recyclerview"
        app:layout_constraintEnd_toStartOf="@id/btn_recyclerview"
        app:layout_constraintTop_toBottomOf="@id/btn_recyclerview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_recycle_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ADD8E6"
        android:foreground="@drawable/ripple_bg"
        android:text="@string/btn_view_pager"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/btn_recyclegrid"
        app:layout_constraintEnd_toStartOf="@id/btn_recyclegrid"
        app:layout_constraintTop_toBottomOf="@id/btn_recyclegrid" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ADD8E6"
        android:foreground="@drawable/ripple_bg"
        android:text="@string/btn_bottom_nav"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/btn_recycle_tab"
        app:layout_constraintEnd_toStartOf="@id/btn_recycle_tab"
        app:layout_constraintTop_toBottomOf="@id/btn_recycle_tab" />

</androidx.constraintlayout.widget.ConstraintLayout>