<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.FragmentActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFragmentSimple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        android:background="#ADD8E6"
        android:text="@string/btn_chap4_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFragmentFragmentcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#ADD8E6"
        android:text="@string/btn_chap4_fragmentContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFragmentSimple" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFragmentJetpack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#ADD8E6"
        android:text="@string/btn_chap4_jetpack"
        app:layout_constraintEnd_toEndOf="@id/btnFragmentSimple"
        app:layout_constraintStart_toStartOf="@id/btnFragmentSimple"
        app:layout_constraintTop_toBottomOf="@id/btnFragmentFragmentcontainer" />
</androidx.constraintlayout.widget.ConstraintLayout>