<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.myapplication.Layouts.FeedbackActivity">
    tools:context=".layout.FeedbackActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="@style/bold_20_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/form_text_title"
        android:textColor="#808080"
        android:textSize="25dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name"
        style="@style/bold_20_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:focusable="true"
        android:hint="@string/et_name"
        android:padding="10dp"
        android:textColorHint="#808080"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        style="@style/bold_20_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:focusable="true"
        android:hint="@string/et_email"
        android:padding="10dp"
        android:textColorHint="#808080"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_praise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:focusable="true"
            android:padding="10dp"
            android:spinnerMode="dialog"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageView
            android:layout_width="50px"
            android:layout_height="50px"
            android:layout_gravity="right"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="25dp"
            android:layout_weight="2"
            android:src="@drawable/drop_down" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_feedback"
        style="@style/bold_20_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:focusable="true"
        android:hint="@string/et_feedback"
        android:lines="5"
        android:padding="10dp"
        android:textColorHint="#808080" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_praise"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_remember"
            style="@style/bold_20_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/chk_praise"
            android:text=""
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/white"
        android:foreground="@drawable/ripple_bg"
        android:text="@string/btn_send"
        android:textAllCaps="false"
        android:textColor="@color/black"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        style="@style/bold_20_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Enter Feedback details to send to the developer"
        android:textColor="#808080" />

</androidx.appcompat.widget.LinearLayoutCompat>